--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
@@ -21,6 +22,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.17",
     "zod": "^4.1.12"
   },
   "devDependencies": {
